--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,4 +19,5 @@ repos:
         additional_dependencies:
           - pydantic~=2.0
           - sqlalchemy~=2.0
+          - minio
         exclude: tests/
