--- a/requirements.txt
+++ b/requirements.txt
@@ -4,42 +4,58 @@
 #
 #    pip-compile requirements.in
 #
-aio-pika==9.4.1
-    # via -r requirements.in
-aiormq==6.8.0
-    # via aio-pika
 annotated-types==0.6.0
     # via pydantic
 anyio==4.3.0
     # via starlette
-argon2-cffi==23.1.0
-    # via minio
-argon2-cffi-bindings==21.2.0
-    # via argon2-cffi
+av==11.0.0
+    # via faster-whisper
 certifi==2024.2.2
-    # via minio
-cffi==1.16.0
-    # via argon2-cffi-bindings
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via uvicorn
+coloredlogs==15.0.1
+    # via onnxruntime
+ctranslate2==4.1.0
+    # via faster-whisper
 fastapi==0.110.0
     # via -r requirements.in
+faster-whisper==1.0.1
+    # via -r requirements.in
+filelock==3.13.3
+    # via huggingface-hub
+flatbuffers==24.3.25
+    # via onnxruntime
+fsspec==2024.3.1
+    # via huggingface-hub
 h11==0.14.0
     # via uvicorn
+huggingface-hub==0.22.2
+    # via
+    #   faster-whisper
+    #   tokenizers
+humanfriendly==10.0
+    # via coloredlogs
 idna==3.6
     # via
     #   anyio
-    #   yarl
-minio==7.2.5
-    # via -r requirements.in
-multidict==6.0.5
-    # via yarl
-pamqp==3.3.0
-    # via aiormq
-pycparser==2.21
-    # via cffi
-pycryptodome==3.20.0
-    # via minio
+    #   requests
+mpmath==1.3.0
+    # via sympy
+numpy==1.26.4
+    # via
+    #   ctranslate2
+    #   onnxruntime
+onnxruntime==1.17.1
+    # via faster-whisper
+packaging==24.0
+    # via
+    #   huggingface-hub
+    #   onnxruntime
+protobuf==5.26.1
+    # via onnxruntime
 pydantic==2.6.4
     # via
     #   fastapi
@@ -52,21 +68,32 @@ python-dotenv==1.0.1
     # via pydantic-settings
 python-multipart==0.0.9
     # via -r requirements.in
+pyyaml==6.0.1
+    # via
+    #   ctranslate2
+    #   huggingface-hub
+requests==2.31.0
+    # via huggingface-hub
 sniffio==1.3.1
     # via anyio
 starlette==0.36.3
     # via fastapi
+sympy==1.12
+    # via onnxruntime
+tokenizers==0.15.2
+    # via faster-whisper
+tqdm==4.66.2
+    # via huggingface-hub
 typing-extensions==4.10.0
     # via
     #   fastapi
-    #   minio
+    #   huggingface-hub
     #   pydantic
     #   pydantic-core
 urllib3==2.2.1
-    # via minio
+    # via requests
 uvicorn==0.29.0
     # via -r requirements.in
-yarl==1.9.4
-    # via
-    #   aio-pika
-    #   aiormq
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
