--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,18 @@
 #
 #    pip-compile requirements.in
 #
+alabaster==0.7.16
+    # via sphinx
 annotated-types==0.6.0
     # via pydantic
 anyio==4.3.0
     # via starlette
+argostranslate==1.0
+    # via -r requirements.in
 av==11.0.0
     # via faster-whisper
+babel==2.14.0
+    # via sphinx
 certifi==2024.2.2
     # via requests
 charset-normalizer==3.3.2
@@ -19,17 +25,29 @@ click==8.1.7
 coloredlogs==15.0.1
     # via onnxruntime
 ctranslate2==4.1.0
-    # via faster-whisper
+    # via
+    #   argostranslate
+    #   faster-whisper
+docutils==0.18.1
+    # via
+    #   sphinx
+    #   sphinx-rtd-theme
+emoji==2.11.0
+    # via stanza
 fastapi==0.110.0
     # via -r requirements.in
 faster-whisper==1.0.1
     # via -r requirements.in
 filelock==3.13.3
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   torch
 flatbuffers==24.3.25
     # via onnxruntime
 fsspec==2024.3.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   torch
 h11==0.14.0
     # via uvicorn
 huggingface-hub==0.22.2
@@ -42,20 +60,67 @@ idna==3.6
     # via
     #   anyio
     #   requests
+imagesize==1.4.1
+    # via sphinx
+jinja2==3.1.3
+    # via
+    #   sphinx
+    #   torch
+markupsafe==2.1.5
+    # via jinja2
 mpmath==1.3.0
     # via sympy
+networkx==3.2.1
+    # via
+    #   stanza
+    #   torch
 numpy==1.26.4
     # via
     #   ctranslate2
     #   onnxruntime
+    #   stanza
+nvidia-cublas-cu12==12.1.3.1
+    # via
+    #   nvidia-cudnn-cu12
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-cuda-cupti-cu12==12.1.105
+    # via torch
+nvidia-cuda-nvrtc-cu12==12.1.105
+    # via torch
+nvidia-cuda-runtime-cu12==12.1.105
+    # via torch
+nvidia-cudnn-cu12==8.9.2.26
+    # via torch
+nvidia-cufft-cu12==11.0.2.54
+    # via torch
+nvidia-curand-cu12==10.3.2.106
+    # via torch
+nvidia-cusolver-cu12==11.4.5.107
+    # via torch
+nvidia-cusparse-cu12==12.1.0.106
+    # via
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-nccl-cu12==2.19.3
+    # via torch
+nvidia-nvjitlink-cu12==12.4.99
+    # via
+    #   nvidia-cusolver-cu12
+    #   nvidia-cusparse-cu12
+nvidia-nvtx-cu12==12.1.105
+    # via torch
 onnxruntime==1.17.1
     # via faster-whisper
 packaging==24.0
     # via
     #   huggingface-hub
     #   onnxruntime
+    #   sphinx
 protobuf==5.26.1
-    # via onnxruntime
+    # via
+    #   onnxruntime
+    #   stanza
 pydantic==2.6.4
     # via
     #   fastapi
@@ -64,6 +129,14 @@ pydantic-core==2.16.3
     # via pydantic
 pydantic-settings==2.2.1
     # via -r requirements.in
+pygments==2.17.2
+    # via sphinx
+pyqt5==5.15.10
+    # via argostranslate
+pyqt5-qt5==5.15.2
+    # via pyqt5
+pyqt5-sip==12.13.0
+    # via pyqt5
 python-dotenv==1.0.1
     # via pydantic-settings
 python-multipart==0.0.9
@@ -73,23 +146,62 @@ pyyaml==6.0.1
     #   ctranslate2
     #   huggingface-hub
 requests==2.31.0
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   sphinx
+    #   stanza
+sentencepiece==0.2.0
+    # via argostranslate
 sniffio==1.3.1
     # via anyio
+snowballstemmer==2.2.0
+    # via sphinx
+sphinx==3.2.1
+    # via
+    #   argostranslate
+    #   sphinx-rtd-theme
+    #   sphinxcontrib-jquery
+sphinx-rtd-theme==1.3.0
+    # via argostranslate
+sphinxcontrib-applehelp==1.0.8
+    # via sphinx
+sphinxcontrib-devhelp==1.0.6
+    # via sphinx
+sphinxcontrib-htmlhelp==2.0.5
+    # via sphinx
+sphinxcontrib-jquery==4.1
+    # via sphinx-rtd-theme
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==1.0.7
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.10
+    # via sphinx
+stanza==1.8.1
+    # via argostranslate
 starlette==0.36.3
     # via fastapi
 sympy==1.12
-    # via onnxruntime
+    # via
+    #   onnxruntime
+    #   torch
 tokenizers==0.15.2
     # via faster-whisper
+toml==0.10.2
+    # via stanza
+torch==2.2.2
+    # via stanza
 tqdm==4.66.2
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   stanza
 typing-extensions==4.10.0
     # via
     #   fastapi
     #   huggingface-hub
     #   pydantic
     #   pydantic-core
+    #   torch
 urllib3==2.2.1
     # via requests
 uvicorn==0.29.0
