--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+amqp==5.2.0
+    # via kombu
 annotated-types==0.6.0
     # via pydantic
 anyio==4.3.0
@@ -12,14 +14,28 @@ argostranslate @ git+https://github.com/ddorian/argos-translate.git@upgrade-ctra
     # via -r requirements.in
 av==11.0.0
     # via faster-whisper
+billiard==4.2.0
+    # via celery
+celery[redis]==5.3.6
+    # via -r requirements.in
 certifi==2024.2.2
     # via requests
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
     #   sacremoses
     #   uvicorn
+click-didyoumean==0.3.1
+    # via celery
+click-plugins==1.1.1
+    # via celery
+click-repl==0.3.0
+    # via celery
 coloredlogs==15.0.1
     # via onnxruntime
 ctranslate2==4.1.0
@@ -59,6 +75,8 @@ jinja2==3.1.3
     # via torch
 joblib==1.4.0
     # via sacremoses
+kombu==5.3.7
+    # via celery
 markupsafe==2.1.5
     # via jinja2
 mpmath==1.3.0
@@ -110,6 +128,8 @@ packaging==24.0
     #   argostranslate
     #   huggingface-hub
     #   onnxruntime
+prompt-toolkit==3.0.43
+    # via click-repl
 protobuf==5.26.1
     # via
     #   onnxruntime
@@ -122,6 +142,8 @@ pydantic-core==2.16.3
     # via pydantic
 pydantic-settings==2.2.1
     # via -r requirements.in
+python-dateutil==2.9.0.post0
+    # via celery
 python-dotenv==1.0.1
     # via pydantic-settings
 python-multipart==0.0.9
@@ -130,6 +152,8 @@ pyyaml==6.0.1
     # via
     #   ctranslate2
     #   huggingface-hub
+redis==5.0.3
+    # via celery
 regex==2023.12.25
     # via sacremoses
 requests==2.31.0
@@ -141,7 +165,9 @@ sacremoses==0.0.53
 sentencepiece==0.1.99
     # via argostranslate
 six==1.16.0
-    # via sacremoses
+    # via
+    #   python-dateutil
+    #   sacremoses
 sniffio==1.3.1
     # via anyio
 stanza==1.8.1
@@ -174,10 +200,19 @@ typing-extensions==4.10.0
     #   pydantic
     #   pydantic-core
     #   torch
+tzdata==2024.1
+    # via celery
 urllib3==2.2.1
     # via requests
 uvicorn==0.29.0
     # via -r requirements.in
+vine==5.1.0
+    # via
+    #   amqp
+    #   celery
+    #   kombu
+wcwidth==0.2.13
+    # via prompt-toolkit
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
